Fix button icon visibility by using darker icon color for neutral buttons in share dialog

--- a/react-common/styles/share/share.less
+++ b/react-common/styles/share/share.less
@@ -175,6 +175,7 @@
 
     .common-button.neutral {
         border: 1px solid var(--pxt-neutral-alpha20) !important;
+        color: var(--pxt-neutral-base) !important;
     }
 
     a.common-button.social-icon {
